--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "socket.io": "^4.8.1"
   }
 }
