--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "imagekit": "^6.0.0",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.12",
     "ogl": "^1.0.11",
@@ -28,7 +29,8 @@
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
-    "three": "^0.180.0"
+    "three": "^0.180.0",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
