--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "framer-motion": "^12.23.12",
     "imagekit": "^6.0.0",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.12",
